--- a/src/main/java/com/rating/rate_your_mate/frontend/rateyourmate/package.json
+++ b/src/main/java/com/rating/rate_your_mate/frontend/rateyourmate/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -22,8 +23,12 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
+    "chalk": "^4.0.0",
+    "execa": "^4.0.0",
     "jest": "^27.0.5",
+    "node-emoji": "^1.10.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-gh-pages-auto-deploy": "~0.5.0"
   }
 }
