--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>backend</artifactId>
-    <name>Archetype - backend</name>
+    <name>backend</name>
     <url>http://maven.apache.org</url>
 
     <properties>
