--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "gh-pages": "^6.2.0",
+    "save-dev": "^0.0.1-security"
   }
 }
